--- a/app/styles/newcomponents/detail-cohorts.scss
+++ b/app/styles/newcomponents/detail-cohorts.scss
@@ -1,5 +1,5 @@
 .detail-cohorts {
-  @include detail-container($text-blue);
+  @include detail-container($ilios-orange);
 
   .title {
     @include detail-container-title;
